Fix QSqlQuery warnings

Summary:
A default constructed QSqlQuery is not a passive null-value but a
query prepared for the default database which may not be allowed
in the current thread. Instead try connecting to the akonadi default
database.

BUG: 391783

Reviewers: mlaurent, dvratil

Reviewed By: dvratil

Subscribers: dvratil, ngraham, #kde_pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D11273