src/server/storage/querybuilder.cpp
@@ -101,6 +101,7 @@ QueryBuilder::QueryBuilder(const QString &table, QueryBuilder::QueryType type)
     : mTable(table)
 #ifndef QUERYBUILDER_UNITTEST
     , mDatabaseType(DbType::type(DataStore::self()->database()))
+    , mQuery(DataStore::self()->database())
 #else
     , mDatabaseType(DbType::Unknown)
 #endif
@@ -356,7 +357,7 @@ bool QueryBuilder::exec()
     if (QueryCache::contains(statement)) {
         mQuery = QueryCache::query(statement);
     } else {
-        mQuery = QSqlQuery(DataStore::self()->database());
+        mQuery.clear();
         mQuery.prepare(statement);
         QueryCache::insert(statement, mQuery);
     }
